# story-summary

./: .gitignore  .pre-commit-config.yaml  README.md  cog.yaml  predict.py  pyproject.toml  tox.ini
.github/workflows/: build.yml
